apps/base/media/plex/ingressroute-tls.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nzbget-tls
spec:
  entryPoints:
    - websecure
  routes: # TODO Set api with no auth
    - kind: Rule
      match: Host(`nzbget.${CLUSTER_DOMAIN}`)
      services:
        - name: nzbget
          port: 6789
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
        - name: traefik-forward-auth
          namespace: kube-system

    - kind: Rule
      match: Host(`nzbget.${CLUSTER_DOMAIN}`) && (PathPrefix(`/xmlrpc`) || PathPrefix(`/jsonrpc`) || PathPrefix(`/jsonprpc`))
      services:
        - name: nzbget
          port: 6789
      middlewares:
        - name: traefik-secure-headers
          namespace: kube-system
  tls:
    certResolver: cloudflare
